# kubeintel

./: .env.example  .gitignore  .pre-commit-check.sh  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup-irsa.sh
.github/workflows/: ci.yml
docs/: AWS_STRANDS_TROUBLESHOOTING.md  MODEL_CONFIGURATION.md
helm/: Chart.yaml  README.md  UPGRADE.md  values.yaml
helm/templates/: NOTES.txt  _compatibility.tpl  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  migration-configmap.yaml  networkpolicy.yaml  rbac.yaml  secret.yaml  service.yaml  serviceaccount.yaml  validation-job.yaml
src/: __init__.py  api.py  background_monitor.py  config.py  cost_visualizer.py  kubernetes_agent.py  kubernetes_strands_tools.py  main.py  model_manager.py  strands_api.py  strands_k8s_agent.py  strands_vpc_analyzer.py  telemetry_api.py  tools.py
src/agent/: __init__.py  strands_agent_simple.py
src/api/: __init__.py  observability.py
src/event_loop/: __init__.py  continuous_monitor.py  event_loop.py  event_processor.py  monitoring_scheduler.py  predictive_analytics.py  trend_analyzer.py
src/k8s/: __init__.py  client.py  collector.py
src/models/: __init__.py  kubernetes.py
src/observability/: error_handler.py
src/streaming/: __init__.py  sse_handler.py  stream_handler.py  websocket_manager.py
static/: cost-visualizer.html  dashboard.html  flow-visualizer.html  index.html
static/js/: flow-visualizer.js
tests/: __init__.py  test_collector.py  test_kubernetes_client.py  test_kubernetes_tools.py  test_kubernetes_tools_bottlenecks.py  test_kubernetes_tools_deployment_history.py  test_kubernetes_tools_deployments.py  test_kubernetes_tools_events.py  test_kubernetes_tools_formatting.py  test_kubernetes_tools_manifest_validation.py  test_kubernetes_tools_metrics.py  test_kubernetes_tools_optimization.py  test_kubernetes_tools_pod_health.py  test_kubernetes_tools_pods.py  test_kubernetes_tools_security.py  test_kubernetes_tools_services.py  test_models.py  test_strands_agent_integration.py
